<resources>
    <string name="app_name">Health Monitor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">822675304560282</string>
    <string name="fb_login_protocol_scheme">fb1231568213620414</string>
    <string name="link_text">La mejor app para el control de tu salud, ingresa ahora y regístrate</string>
    <string name="linkGoogleplay">https://play.google.com/store/apps/details?id=com.grupocisc.healthmonitor</string>
    <string name="base_path">http://api.edukte.net/services/meducation/mxmov/</string>
    <string name="txt_reintenter">Reintentar</string>
    <string name="txt_no_data">No hay datos</string>
    <string name="txt_compartir">Compartir</string>
    <string name="hashtag" translatable="false"> #TapIntoTwitter </string>
    <string name="twitter_search" translatable="false">from:@HealthmonitorD </string>
    <string name="twitter_search_friends" translatable="false"> from:HealthMonitor OR  #SaludParaGuayas OR #diabetes OR #asma </string>
    <string name="menu_create_tweet">Create Tweet</string>
    <string name="menu_follow">Follow via QR Code</string>
    <string name="menu_share_handle">Share your handle</string>
    <string name="menu_about">About</string>
    <string name="menu_account_to_follow">Follow</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="toast_follow_user_success">You are now following</string>
    <string name="toast_follow_user_error">Failed to follow user, try again later.</string>
    <string name="toast_sign_out">User signed out successfully.</string>
    <string name="qrcode_label">QR Code</string>
    <string name="scan_prompt">The QR Code can be found in the meetup badge or the "Share handle" option in this app.\nScan the QR code to follow someone.</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_share_handle">Share handle</string>
    <string name="instructions">Ask your friend to scan this QR code with this app.</string>
    <string name="message">Scan this to follow</string>
    <string name="title_activity_about_tw">About</string>
    <string name="app_built_with">This app was built using</string>
    <string name="twitter_kit">Twitter Kit 3.0</string>
    <string name="learn_more">Learn more at\nhttps://t.co/twitterkit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planets_prompt">Medido</string>
    <string-array name="planets_array">
        <item>Selecciona uno…</item>  
        <item>Antes del desayuno</item>
        <item>Después del desayuno</item>
        <item>Antes del almuerzo</item>
        <item>Después del almuerzo</item>
        <item>Antes de la cena</item>
        <item>Después de la cena</item>
        <item>Temtempié</item>
        <item>Hora de dormir</item>
        <item>Noche</item>
        <item>Glucosa en ayunas</item>
        <item>Otros</item>
    </string-array>
    <string name="feeding_prompt">Categoría</string>
    <string-array name="feeding_categoria_array">
        <item>Selecciona uno…</item>
        <item>Productos lácteos</item>
        <item>Grasas y Aceites</item>
        <item>Frutas y hortalizas</item>
        <item>Confitería</item>
        <item>Cereales</item>
        <item>Productos de Panadería</item>
        <item>Carnes</item>
        <item>Pescado y productos pesqueros</item>
        <item>Huevos</item>
        <item>Edulcorantes</item>
        <item>Sales, salsas y ensaladas</item>
        <item>Edulcorantes</item>
        <item>Bebidas</item>
    </string-array>
    <string name="caloria_prompt">Categoría</string>
    <string-array name="feeding_caloria_array">
        <item>Seleccione un valor…</item>
        <item>1800</item>
        <item>2000</item>
        <item>2200</item>
        <item>2400</item>
    </string-array>
    <string name="porcion_prompt">Porción</string>
    <string-array name="feeding_porcion_array">
        <item>Seleccione un valor…</item>
        <item>Unidad(es)</item>
        <item>Taza(s)</item>
        <item>Gramo(s)</item>
        <item>Mililitro(s)</item>
        <item>Vaso(s)</item>
        <item>Cucharada(s)</item>
        <item>Cucharadita(s)</item>
        <item>Ración(s)</item>
        <item>Rebanada(s)</item>
    </string-array>
    <string-array name="pluse_array">
        <item>Seleccionar Estado Actual</item>  
        <item>General</item>
        <item>Descanso</item>
        <item>Después de ejercicio</item>
        <item>Antes de ejercicio</item>
        <item>Cansado</item>
        <item>Enfermo</item>
    </string-array>
    <string-array name="pluse_GraStado">
        <item>Todos</item>  
        <item>Pulsos mas Bajos</item>
        <item>Pulsos mas Altos</item>
    </string-array>
    <string name="state_prompt">Estados</string>
    <string-array name="state_GraStado">
        <item>Todos</item>  
        <item>Increíble (1) </item>

        <item>Bien (2)      </item>
        <item>Normal (3)    </item>
        <item>Mal (4)       </item>
        <item>Horrible (5)  </item>
    </string-array>
    <string name="medico_prompt">Buscar Por:</string>
    <string-array name="medico_GraStado">
        <item>Nombre    </item>  
        <item>Correo  </item>
    </string-array>
    <string name="planets_promptpr">Presion</string>
    <string-array name="pressure_GraStado">
        <item>Todos</item>  
        <item>Presion mas Baja</item>
        <item>Presion mas Alta</item>
    </string-array>
    <string name="planets_promptp">Peso</string>
    <string-array name="weight_GraStado">
        <item>Todos</item>  
        <item>Pesos mas Bajos</item>
        <item>Pesos mas Altos</item>
    </string-array>
    <string-array name="insulin_GraStado">
        <item>Todos</item>  
        <item>Dosis mas Bajas</item>
        <item>Dosis mas Altas</item>
    </string-array>
    <string name="preferencias_inicio">inicioPreferences</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="sin_conexion">Sin conexión a Internet. Por favor, compruebe WiFi o 3G.</string>
    <string name="ingrese">Por favor, ingrese un valor válido.</string>
    <string name="ingresew">Por favor, ingrese peso válido.</string>
    <string name="text_especialidad">Especialidad:</string>
    <string name="estado">Por favor, seleccione su estado de ánimo</string>
    <string name="txt_inciar">Por favor, seleccione su estado de ánimo</string>
    <string name="txt_contrasena">Se te olvidó tu contraseña?</string>
    <string name="txt_sta_increible">Increíble</string>
    <string name="txt_sta_bien">Bien</string>
    <string name="txt_sta_normal">Normal</string>
    <string name="txt_sta_mal">Mal</string>
    <string name="txt_sta_horrible">Horrible</string>
    <string name="txt_perfil_title_1">Datos Personales</string>
    <string name="subscribe">Suscripción</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="guardar">Guardar</string>
    <string name="txt_omitir">Omitir</string>
    <string name="txt_terminar">Terminar</string>
    <string name="txt_siguiente">Siguiente</string>
    <string name="txt_atras">Atrás</string>
    <string name="txt_enviar">Enviar</string>
    <string name="txt_iniciar">Iniciar sesión</string>
    <string name="txt_cerrar">Cerrar sesión</string>
    <string name="txt_change_pass">Cambiar la contraseña</string>
    <string name="actualiza_datos">Actualizar datos</string>
    <string name="text_recuperarCon">Solo necesitamos su identificación de correo electrónico registrada para restablecer su contraseña</string>
    <string name="text_btn_recuperar">RESTABLECER CONTRASEÑA</string>
    <string name="txt_iniciarM">INICIAR SESIÓN</string>
    <string name="txt_crearM">CREAR CUENTA</string>
    <string name="error_login">Debe iniciar sesión para poder ingresar a esta sección</string>
    <string name="text_seldoc">Estimado, Para una mejor atención, seleccione el Doctor el cual usted considere confiable para que lo acompañe en su tratamiento</string>
    <string name="text_error_metodo">Ha ocurrido un problema, por favor inténtalo nuevamente</string>
    <string name="text_error_metodo_email">Ha ocurrido un problema, no se encuentra el Email, por favor inténtalo nuevamente</string>
    <string name="txt_mensaje_noti">No ha recibido notificaciones</string>
    <string name="txt_mensaje_tips">No ha recibido tips</string>
    <string name="txt_atencion">Atención</string>
    <string name="txt_error">Error</string>
    <string name="txt_ok">Éxito</string>
    <string name="txt_hombre">Hombre</string>
    <string name="txt_mujer">Mujer</string>
    <string name="txt_select_especiality">Seleccione especialidad</string>
    <string name="txt_vincular">VINCULAR DOCTOR</string>
    <string name="txt_desvincular">DESVINCULAR DOCTOR</string>
    <string name="text_datos">Datos personales</string>
    <string name="text_nombres">Nombres:</string>
    <string name="text_apellidos">Apellidos:</string>
    <string name="text_celular"># Celular:</string>
    <string name="text_email">E-mail:</string>
    <string name="text_fecha">Fecha de Nacimiento:</string>
    <string name="text_sexo">Sexo:</string>
    <string name="text_altura">Altura:</string>
    <string name="text_peso">Peso inicial:</string>
    <string name="text_tipo_asma">Tipo Asma:</string>
    <string name="text_tipo_diabetes">Tipo Diabetes:</string>
    <string name="text_estcivil">Estado Civil:</string>
    <string name="text_telefono">Celular:</string>
    <string name="text_pais">País:</string>
    <string name="text_logout">¿Está seguro que desea cerrar sesión?</string>
    <string name="text_datos_doctor">Datos del Doctor</string>
    <string name="maximo">100</string>
    <string name="minimo">10</string>
    <string name="text_error_fecnac">Fecha de Nacimiento Inválida</string>
    <string name="maximo_peso">200</string>
    <string name="minimo_peso">35</string>
    <string name="minimo_telefono">10</string>
    <string name="maximo_altura">2.10</string>
    <string name="minimo_altura">1.40</string>
    <string name="back_pass">Su nueva contraseña fue enviada a su correo electrónico.</string>
    <string name="txt_back_pass">Ingrese su nueva contraseña</string>
    <string name="txt_back">Por favor, Ingrese su nueva contraseña.</string>
    <string name="lbl_MedicationControlUpd">Editar Control de Medicamento</string>
    <string name="txt_MedicationControlTimesDays">Veces en el día</string>
    <string name="lbl_MedicationControlDate">Fecha</string>
    <string name="txt_MedicationControlDefaultDate">01/01/2017</string>
    <string name="lbl_MedicationControlHour">Hora</string>
    <string name="txt_MedicationControlHourFormat">HH:mm</string>
    <string name="txt_MedicationControlObs">Observaciones</string>
    <string name="txt_Save">GUARDAR</string>
    <string name="txt_Cancel">CANCELAR</string>
    <string name="txt_import_1">Restaurar Registros </string>
    <string name="txt_import_2">Restaura los registros de tus controles de </string>
    <string name="txt_import_3">salud desde el servidor de Health Monitor. </string>
    <string name="txt_import_4">Si no los restauras ahora, no podrás hacerlo después.</string>
</resources>