<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_import_1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal|bold" />


        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/cloud_storage_download" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_import_2"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_import_3"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_import_4"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal|bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_omitir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/blackSubMenu"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txt_omitir"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/btn_login"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txt_siguiente"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
