<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMainMedUdpAct"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/layoutContentMedUpdAct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

    <android.support.v7.widget.CardView
        android:id="@+id/cardMedUpdAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="false"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="8dp"
        >
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars = "vertical"
            android:scrollbarStyle="insideInset">

        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_MedicationControlUpd"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/silver_fondo"/>

            <TextView
                android:id="@+id/NombreUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16dp"/>

            <TextView
                android:id="@+id/IdMed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <EditText
                        android:id="@+id/updt_dosis"
                        android:layout_width="200dp"
                        android:layout_height="43dp"
                        android:hint="Dosis"
                        android:inputType="numberDecimal"
                        android:maxLength="6"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    >

                    <EditText
                        android:id="@+id/updt_vecesDia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_MedicationControlTimesDays"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:id="@+id/lyt_fecha"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/lbl_MedicationControlDate"
                        android:layout_marginBottom="5dp"
                        android:clickable="false"
                        />

                    <TextView
                        android:id="@+id/updt_fecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/txt_MedicationControlDefaultDate"
                        android:clickable="false"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/silver_fondo"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lyt_hora"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/lbl_MedicationControlHour"
                        android:clickable="false"
                        />
                    <TextView
                        android:id="@+id/updt_hora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/txt_MedicationControlHourFormat"
                        android:clickable="false"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/silver_fondo"/>
                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/updt_obs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_MedicationControlObs"
                    android:maxLength="200"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="40dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnSave"
                    android:text="@string/txt_Save"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50" />

                <Button
                    android:id="@+id/btnClose"
                    android:text="@string/txt_Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50" />

            </LinearLayout>


        </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>
        <RelativeLayout
            android:id="@+id/layoutButtonsMedUpdAct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:visibility="gone">

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>