<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/menu_user2" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/white"
                    app:hintTextAppearance="@style/hintText"
                    app:passwordToggleTint="@color/white">

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="E-mail"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:hintTextAppearance="@style/hintText"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    app:cardBackgroundColor="@color/btn_login"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="1dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/bar_selector_white"
                        android:gravity="center"
                        android:padding="9dp"
                        android:text="@string/txt_iniciarM"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/txt_contrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bar_selector_white"
                    android:gravity="center"
                    android:text="@string/txt_contrasena"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal|bold" />

                <android.support.v7.widget.CardView
                    android:id="@+id/card_crear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bar_selector_white"
                    app:cardBackgroundColor="@color/btn_login"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="1dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/bar_selector_white"
                        android:gravity="center"
                        android:padding="9dp"
                        android:text="@string/txt_crearM"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>

